<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_downloading">Downloading&#8230;</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_button_glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_loadapp_text">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="no_radio_button_selected_toast_message">Please select the file to download</string>

    <string name="download_success_text">Success</string>
    <string name="download_fail_text">Fail</string>
    <string name="file_name_title_text">File name:</string>
    <string name="status_title_text">Status:</string>
    <string name="detail_screen_ok_button_text">OK</string>
</resources>
