<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_motion"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">
    
    <TextView
        android:id="@+id/file_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:text="@string/file_name_title_text"/>

    <TextView
        android:id="@+id/file_name_content"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/colorPrimaryDark"
        tools:text="Glide - Image Loading Library by BumpTech:" />

    <TextView
        android:id="@+id/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:text="@string/status_title_text"/>

    <TextView
        android:id="@+id/status_content"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/colorPrimaryDark"
        tools:text="Success"/>

    <Button
        android:id="@+id/detail_screen_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/detail_screen_ok_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        android:layout_margin="20dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>